--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <script src="./JeelizResizer.js"></script>
 
+    <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js" crossorigin></script>
+
     <script src="./JeelizThreeHelper.js"></script>
 
     <script src="./main.js"></script>
