--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 
     <script src="./JeelizResizer.js"></script>
 
-    <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js" crossorigin></script>
+    <script src="./three.js"></script>
+    <script src="./GLTFLoader.js"></script>
 
     <script src="./JeelizThreeHelper.js"></script>
+
+    <link rel="stylesheet" href="./styleFullScreen.css" type="text/css" />
 
     <script src="./main.js"></script>
 
